test/files/neg/t6013.check
DerivedScala.scala:4: error: class C needs to be abstract. No implementation found in a subclass for deferred declaration
def foo: Int (defined in class B)
class C extends B
      ^
DerivedScala.scala:7: error: class DerivedScala needs to be abstract. No implementation found in a subclass for deferred declaration
def foo(): Boolean (defined in class Abstract)
class DerivedScala extends Abstract
      ^
2 errors
